--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,42 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+
+    /* FONT FAMILY: QUICKSAND */
+    @font-face {
+        font-family: 'Quicksand Light';
+        src: url('/assets/fonts/Quicksand/Quicksand-Light.ttf');
+    }
+
+    @font-face {
+        font-family: 'Quicksand Medium';
+        src: url('/assets/fonts/Quicksand/Quicksand-Medium.ttf');
+    }
+
+    @font-face {
+        font-family: 'Quicksand Regular';
+        src: url('/assets/fonts/Quicksand/Quicksand-Regular.ttf');
+    }
+
+    @font-face {
+        font-family: 'Quicksand Bold';
+        src: url('/assets/fonts/Quicksand/Quicksand-Bold.ttf');
+    }
+
+    @font-face {
+        font-family: 'Quicksand SemiBold';
+        src: url('/assets/fonts/Quicksand/Quicksand-SemiBold.ttf');
+    }
+
+    /* FONT-FAMILY: FUTURA */
+    @font-face {
+        font-family: 'Futura';
+        src: url('/assets/fonts/Futura/futur.ttf')
+    }
+
+    body {
+        font-family: 'Quicksand Medium', sans-serif;
+    }
+}
